--- a/build
+++ b/build
@@ -5,8 +5,6 @@ OUTPUT=${1:-bin/eva}
 echo "Building eva ..."
 mkdir -p bin
 
-go get -u github.com/gin-gonic/gin github.com/lib/pq
-curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-dep ensure
+go get -u github.com/gin-gonic/gin github.com/lib/pq github.com/jmoiron/sqlx
 
 go build -o $OUTPUT .
