Update: CI involved

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
 - chmod +x build
 install:
 - go get -u github.com/gin-gonic/gin github.com/lib/pq github.com/jmoiron/sqlx
-- go build . && ./release
+- go build server/rest/evasvc.go && ./release
 script:
 - docker build --rm -t 6congyao/eva .
 after_success:
