add mysql driver

--- a/build
+++ b/build
@@ -4,5 +4,5 @@ OUTPUT=${1:-bin/evasvc}
 echo "Building eva ..."
 mkdir -p bin
 
-go get -u github.com/gin-gonic/gin github.com/lib/pq github.com/jmoiron/sqlx
+go get -u github.com/gin-gonic/gin github.com/jmoiron/sqlx github.com/go-sql-driver/mysql github.com/lib/pq
 go build -o $OUTPUT server/rest/evasvc.go
